--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.g4pas.docker</groupId>
     <artifactId>mavenastic</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.7-SNAPSHOT</version>
     <name>Maven Elastic Image</name>
     <packaging>pom</packaging>
     <description>Combination of Elastic search and maven to allow maven tests to run against a local ElasticSearch
@@ -28,7 +28,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>guidof/mavenastic:${project.version}</name>
+                            <name>guidof/mavenastic</name>
                             <build>
                                 <dockerFileDir>Dockerfile</dockerFileDir>
                             </build>
